--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 value: saldo.toFixed(2),
             };
 
-            fetch('https://sandbox.ws.suitpay.app/api/v1/gateway/pix-payment', {
+            fetch('https://ws.suitpay.app/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
