--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
-            display: none;
-        }
-        .container.active {
-            display: block;
         }
         picture img {
             width: 100%;
@@ -42,6 +38,11 @@
         }
         .content {
             margin: 20px 0;
+        }
+        .captcha {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
         }
         .btn {
             display: block;
@@ -143,7 +144,7 @@
     <link rel="dns-prefetch" href="https://api.vturb.com.br">
 </head>
 <body>
-    <div class="container active" id="page1">
+    <div class="container" id="page1">
         <picture>
             <source srcset="assets/img/img1.webp" type="image/webp">
             <source srcset="assets/img/img1.png" type="image/png">
@@ -334,8 +335,8 @@
             if (grecaptcha.getResponse() === '') {
                 document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
             } else {
-                document.getElementById('page1').classList.remove('active');
-                document.getElementById('page2').classList.add('active');
+                document.getElementById('page1').style.display = 'none';
+                document.getElementById('page2').style.display = 'block';
                 updateTask();
             }
         });
@@ -371,17 +372,16 @@
         });
 
         document.getElementById('goToVideoButton').addEventListener('click', function() {
-            document.getElementById('tasksCompletedPage').classList.remove('active');
-            document.getElementById('pageFinal').classList.add('active');
-            document.getElementById('finalSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+            document.getElementById('tasksCompletedPage').style.display = 'none';
+            document.getElementById('pageFinal').style.display = 'block';
             setTimeout(() => {
                 document.getElementById('withdrawButton').style.display = 'block';
             }, 60000); // 1 minuto
         });
 
         document.getElementById('withdrawButton').addEventListener('click', function() {
-            document.getElementById('pageFinal').classList.remove('active');
-            document.getElementById('withdrawPage').classList.add('active');
+            document.getElementById('pageFinal').style.display = 'none';
+            document.getElementById('withdrawPage').style.display = 'block';
             document.getElementById('withdrawSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
         });
 
