--- a/index2.html
+++ b/index2.html
@@ -39,11 +39,6 @@
         .content {
             margin: 20px 0;
         }
-        .captcha {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
         .btn {
             display: block;
             width: 100%;
@@ -159,12 +154,8 @@
             <p>O Google Captchas precisa de você para aumentar a segurança dos seus sites analisando se os Captchas estão marcados corretamente ou incorretamente.</p>
             <p>Você acaba de receber acesso à nova ferramenta do Google para análise de Captchas. <b>Aproveite, você já ganhou R$100,00</b>!</p>
             <p>Complete 7 Tarefas Simples e realize seu primeiro saque em minutos.</p>
-            <p>Complete o Captcha para Começar a sua Primeira Tarefa.</p>
         </div>
-        <div class="captcha">
-            <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
-        </div>
-        <button class="btn" id="startButton" disabled>Começar Agora</button>
+        <button class="btn btn-green" id="startButton">Começar Agora</button>
         <div class="error" id="errorMessage"></div>
     </div>
 
@@ -191,7 +182,7 @@
             <img id="taskImage" alt="Captcha com veículos">
         </picture>
         <div class="progress-bar">
-            <div class="progress-bar-fill" id="progressBarFill">0%</</div>
+            <div class="progress-bar-fill" id="progressBarFill">0%</div>
         </div>
         <button class="btn btn-green" id="yesButton">Sim</button>
         <button class="btn btn-red" id="noButton">Não</button>
@@ -276,7 +267,6 @@
         <p id="popupText"></p>
     </div>
     
-    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
         const tasks = [
             { imageWebp: 'assets/img/captcha1.webp', imagePng: 'assets/img/captcha1.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.', answer: 'sim' },
@@ -330,20 +320,10 @@
             }, 3000);
         }
 
-        function recaptchaCallback() {
-            document.getElementById('startButton').disabled = false;
-            document.getElementById('startButton').classList.add('btn-green');
-            new Audio('assets/audio/ok.mp3').play();
-        }
-
         document.getElementById('startButton').addEventListener('click', function() {
-            if (grecaptcha.getResponse() === '') {
-                document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
-            } else {
-                document.getElementById('page1').style.display = 'none';
-                document.getElementById('page2').style.display = 'block';
-                updateTask();
-            }
+            document.getElementById('page1').style.display = 'none';
+            document.getElementById('page2').style.display = 'block';
+            updateTask();
         });
 
         function validateAnswer(answer) {
