--- a/gpt.html
+++ b/gpt.html
@@ -236,7 +236,7 @@
             <style>
                 .elementor-element:has(#smartplayer) { width: 100%; }
             </style>
-            <button class="btn btn-green" id="withdrawButton" style="display:none;" onclick="window.location.href='https://captchapay.org/saque/'">Realizar Saque Agora</button>
+            <button class="btn btn-green" id="withdrawButton" onclick="window.location.href='https://captchapay.org/saque/'">Realizar Saque Agora</button>
         </div>
     </div>
 
