--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         });
 
         document.getElementById('withdrawButton').addEventListener('click', function() {
-            window.location.href = "https://captchapay.org/saque/";
+            window.location.href = "https://api.captchapay.org/captcha/saque/";
         });
 
         document.getElementById('yesButton').addEventListener('click', function() {
