--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="canonical" href="https://captchapay.org/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Captchas - Nova Ferramenta</title>
@@ -323,7 +324,7 @@
             document.getElementById('finalSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
             setTimeout(() => {
                 document.getElementById('withdrawButton').style.display = 'block';
-            }, 920000); // 1 minuto
+            }, 386000); // 1 minuto
         });
 
         function validateAnswer(answer) {
