--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             }
         }
     </style>
+    <script src="https://cdn.utmify.com.br/scripts/utms/latest.js" async defer></script>
 </head>
 <body>
     <div class="container" id="page1">
