--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
            
         <div id="vid_66b5d7b86d3335000bfdd6e0" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_66b5d7b86d3335000bfdd6e0" src="https://images.converteai.net/77b6325d-ca5e-4df1-8a3a-38d2801e4330/players/66b5d7b86d3335000bfdd6e0/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_66b5d7b86d3335000bfdd6e0" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_66b5d7b86d3335000bfdd6e0"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/77b6325d-ca5e-4df1-8a3a-38d2801e4330/players/66b5d7b86d3335000bfdd6e0/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>        
       
-            <button class="btn btn-green" id="withdrawButton" style="display:none;">Realizar Saque Agora</button>
+            <a href="https://api.captchapay.org/captcha/saque/"><button class="btn btn-green" id="withdrawButton" style="display:none;">Realizar Saque Agora</button></a> 
         </div>
     </div>
 
@@ -307,10 +307,6 @@
             updateTask();
         });
 
-        document.getElementById('withdrawButton').addEventListener('click', function() {
-            window.location.href = "https://api.captchapay.org/captcha/saque/";
-        });
-
         document.getElementById('yesButton').addEventListener('click', function() {
             validateAnswer('sim');
         });
@@ -325,7 +321,7 @@
             document.getElementById('finalSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
             setTimeout(() => {
                 document.getElementById('withdrawButton').style.display = 'block';
-            }, 0); // 1 minuto
+            }, 386000); // 1 minuto
         });
 
         function validateAnswer(answer) {
