--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </picture>
         <div class="saldo" id="finalSaldo">Saldo: R$100,00</div>
         <div class="content">
-            <p>O saque será liberado ao final deste vídeo! Assista e entenda como funciona o Google Captcha e porque você está sendo pago para melhorar a segurança de nossa ferramenta.</p>
+            <p>O saque será liberado ao final deste vídeo!</p>
 <p>▶️ Dê Play no Vídeo Abaixo</p>
            
         <div id="vid_66b5d7b86d3335000bfdd6e0" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_66b5d7b86d3335000bfdd6e0" src="https://images.converteai.net/77b6325d-ca5e-4df1-8a3a-38d2801e4330/players/66b5d7b86d3335000bfdd6e0/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_66b5d7b86d3335000bfdd6e0" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_66b5d7b86d3335000bfdd6e0"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/77b6325d-ca5e-4df1-8a3a-38d2801e4330/players/66b5d7b86d3335000bfdd6e0/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>        
